Fix overflow x issue on iOS

--- a/_assets/stylesheets/_base/_layout.scss
+++ b/_assets/stylesheets/_base/_layout.scss
@@ -34,3 +34,7 @@ body {
         padding-top: $navbar-height + $grid-unit-base;
     }
 }
+
+#content {
+    overflow-x: hidden;
+}
